# hippunfold

./: .bumpversion.cfg  .dryrun_test_all.sh  .flake8  .gitignore  .gitmodules  .readthedocs.yml  Dockerfile  LICENSE  MANIFEST.in  README.md  README.rst  RUN_README.md  cloud-init.yml  debug_snakebids.py  entrypoint.sh  entrypoint_quick.sh  hippunfold-dev.yml  ioFunctions.py  old_run.py  parse.py  pixi.md  pixi.toml  pyproject.toml  requirements.txt  run.py  setup.py  surface-Beltrami.ipynb  unfoldSubject.py
.circleci/: config.yml
.github/: PULL_REQUEST_TEMPLATE.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.md  install_errors.md  other_question.md
.github/workflows/: bump_version.yml  dags.yml  deploy.yml  manual_release_drafter.yml  push_conda.yml  push_container.yml  python-testing.yml  test.yml  wetrun-testing.yml
config/: nnunet_model_urls.yml  snakebids.yml
docs/: .gitignore  conf.py  create_hippunfold_algorithmic_only_pdf.sh  create_hippunfold_manual_pdf.sh  index.md  index.rst  requirements.txt  supp_methods_conf.py  supp_methods_index.md
docs/casts/: vagrant_hippunfold_dryrun.cast  vagrant_hippunfold_get_app_dropbox.cast  vagrant_hippunfold_get_data.cast  vagrant_hippunfold_run.cast  vagrant_hippunfold_setup.cast
docs/contributing/: contributing.md  references.md
docs/getting_started/: HCP.md  HPC.md  apptainer.md  conda.md  conda_advanced.md  docker.md  faq.md  installation.md  installation.rst  outputs.md  outputs.rst  pixi.md  quick_run.md  singularity.md  vagrant.md
docs/outputs/: QC.md  output_files.md  visualization.md
docs/pipeline/: algorithms.md  pipeline.md
docs/tutorials/: outputs.md  specializedScans.md  specializedScans.rst  standardBIDS.md  standardBIDS.rst  visualization.md
docs/usage/: HPC.md  app_cli.rst  cbrain.md  cli.md  faq.md  python.md  quick.md  singularity.md  snakemake_cli.rst  specializedScans.md  templates.md  tutorial_inputs.md  useful_options.md
gen_unfold_template/: README.md  Snakefile  config.yml  config_dentate.yml  config_hipp.yml  convert_csv_to_gifti.m  gen_adaptivesurfs.py  gen_uniformgrid.py
gen_unfold_template/example_transformed/: sub-0001_hemi-R_space-corobl_den-2k_inner.surf.gii  sub-0001_hemi-R_space-corobl_den-2k_midthickness.surf.gii  sub-0001_hemi-R_space-corobl_den-2k_outer.surf.gii  sub-0001_hemi-R_space-corobl_den-400_inner.surf.gii  sub-0001_hemi-R_space-corobl_den-400_midthickness.surf.gii  sub-0001_hemi-R_space-corobl_den-400_outer.surf.gii  sub-0001_hemi-R_space-corobl_den-7k_inner.surf.gii  sub-0001_hemi-R_space-corobl_den-7k_midthickness.surf.gii  sub-0001_hemi-R_space-corobl_den-7k_outer.surf.gii
hippunfold/: Dockerfile  atlas_plugin.py  download_models.py  pipeline_description.json  run.py  run_quick.py
hippunfold/config/: nnunet_model_urls.yml  snakebids.yml
hippunfold/dags/: 00_generate_all.sh  add_subgraphs.sh  dag_subgraphs.py  generate_dag_images.sh  proc_subgraph.py
hippunfold/plugins/: atlas.py
hippunfold/resources/: desc-flipLR_type-itk_xfm.txt  desc-subfields_atlas-freesurfer_dseg.tsv  desc-subfields_atlas-histologyReference2023_dseg.tsv  desc-subfields_atlas-magdeburg_dseg.tsv  desc-subfields_freeview_desg.tsv
hippunfold/tests/: hippunfold_test.py
hippunfold/tmp_from_uzair/: README.md  coordinates.py  diffusion.py  example.py
hippunfold/workflow/: Snakefile
profiles/default/: config.yaml
recipe/: meta.yaml
resources/: Training_Instructions.md  example_sbatch.sh  fineTune_UNet.sh  retrain_UNet.py  write_config_NiftyNet.py
resources/bigbrain/: BigBrain_ManualSubfieldsUnfolded.mat  BigBrain_ManualSubfieldsUnfolded_254x126.border  BigBrain_ManualSubfieldsUnfolded_254x126.label.gii  BigBrain_ManualSubfieldsUnfolded_254x126.shape.gii  sub-bigbrain_hemi-L_subfields.border  sub-bigbrain_hemi-L_subfields.label.gii  sub-bigbrain_hemi-R_subfields.border  sub-bigbrain_hemi-R_subfields.label.gii
resources/tpl-upenn/: Snakefile
resources/unfold_template/: tpl-avg_space-unfold_den-2k_outer.surf.gii  tpl-avg_space-unfold_den-2k_surfarea.shape.gii  tpl-avg_space-unfold_den-32k_outer.surf.vtk  tpl-avg_space-unfold_den-7k_inner.surf.gii
test_data/: README.md
test_data/bids_T1w_longitudinal/: dataset_description.json
test_out/: .snakebids
workflow/: Snakefile
(+458 files in other folders)
