[project]
name = "hippunfold"
version = "1.5.2-pre.2"
description = "BIDS App for Hippocampal AutoTop (automated hippocampal unfolding and subfield segmentation)"
readme = "README.md"
license = "MIT"
authors = [{ name = "Jordan DeKraker & Ali Khan", email = "alik@robarts.ca" }]
requires-python = ">=3.9,<4.0"
dependencies = [
    "snakebids==0.14.0",
    "appdirs>=1.4.4",
    "pulp<2.8.0; python_version<'3.11'",
    "pyvista>=0.44.2"
]

[project.optional-dependencies]
dev = [
    "flake8>=4.0.1",
    "pytest-console-scripts>=1.2.1",
    "pytest>=6.2.5",
    "black>=24.0.0",
    "pylint>=2.11.1",
    "isort>=5.10.1",
    "poethepoet>=0.10.0",
    "snakefmt>=0.10.0",
    "pygraphviz==1.7",
    "Jinja2>=3.0.3"
]

[project.scripts]
hippunfold = "hippunfold.run:app.run"
hippunfold-quick = "hippunfold.run_quick:main"

[tool.setuptools.packages.find]
where = ["."]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pylint.master]
ignore-patterns = "^[0-9][0-9]+_,^test_"

[tool.pylint.format]
good-names = "i,j,k,ex,_,x,y,f,d"

[tool.pylint.messages_control]
disable = """
    missing-function-docstring,
    missing-module-docstring,
    fixme
"""