[tool.poetry]
name = "hippunfold"
version = "1.5.2-pre.2"
description = "BIDS App for Hippocampal AutoTop (automated hippocampal unfolding and subfield segmentation)"
authors = ["Jordan DeKraker & Ali Khan <alik@robarts.ca>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
snakemake = ">=6.0.0"
snakebids = "^0.8.1"
appdirs = "^1.4.4"
Jinja2 = "^3.0.3"
pygraphviz = "1.7"
Pygments = "^2.10.0"
pulp = "<2.8.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest-console-scripts = "^1.2.1"
pytest = "^6.2.5"
black = ">=22.1.0,<23.0.0"
pylint = "^2.11.1"
isort = "^5.10.1"
poethepoet = "^0.10.0"
snakefmt = ">=0.5.0"

[tool.poetry.scripts]
hippunfold = "hippunfold.run:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
quality_check = { shell = "isort hippunfold/*.py -c && black hippunfold --check && snakefmt hippunfold --check" }
quality_fix = { shell = "isort hippunfold/*.py && black hippunfold  && snakefmt hippunfold" }

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pylint.master]
ignore-patterns = "^[0-9][0-9]+_,^test_"

[tool.pylint.format]
good-names = "i,j,k,ex,_,x,y,f,d"

[tool.pylint.messages_control]
disable = """
    missing-function-docstring,
    missing-module-docstring,
    fixme
"""
